update html and css

--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
 
 
                         <div id="big_div">
-                            <p id="w_div">
+                            <p id="s_div">
                                 Using Untitled has streamlined our entire design process. It's an invaluable part of our
                                 studio!
                             </p>
